# sitrepc2

./: .env  .gitignore  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  add_id.py  dir_lookup.csv  gaz.db  holmes_test.py  pyproject.toml  sitrepc2.session  sitrepc2.sublime-workspace  test.session
data/spatial/: regions.csv  ua_settlements.csv  ua_settlements_with_regions.csv
docs/: DOM_PERSISTENCE.md
scripts/: .add_admin4.py.bak  .aliases_from_wikidata.py  .enrich_admin4.py.bak  .missing_qids.py.bak  add_admin4.py  add_aliases.py  append_exonyms.py  create_db.py  duplicateqid.py  enrich_admin4.py  import_direction_lookup.py  import_group_lookup.py  import_locale_lookup.py  import_region_lookup.py  init_db.py  normalize_aliases.py  op_locale_by_quid.py  qid_osm_results.csv  repair_region.py  schema.sql  test_dom_tree.py  update_direction_aliases.py
src/dbeditc2/: app.py  enums.py  gazetteer_ws.py  lexicon_ws.py  location_ws.py  main_window.py  models.py
src/dbeditc2/controller/: editor_controller.py
src/dbeditc2/services/: gazetteer_alias_browser.py  gazetteer_read.py  gazetteer_search.py  lexicon_read.py
src/dbeditc2/widgets/: app_toolbar.py  entry_details_stack.py  entry_list_view.py  loc_form.py  loc_search_panel.py  navigation_tree.py  search_panel.py
src/docrule/: app.py  main_window.py
src/docrule/ingest/: posts_table_model.py  workspace.py
src/docrule/io/: csv_loader.py  json_loader.py  open_path.py  text_loader.py
src/docrule/ui/: document_summary_panel.py  gazetteer_alias_panel.py  ingest_record_picker_dialog.py  model_validator_dialog.py  open_file_dialog.py
src/docruleredit/: app.py  main_window.py
src/docruleredit/controller/: document_controller.py
src/docruleredit/io/: ruler_io.py
src/docruleredit/models/: entity_ruler.py
src/docruleredit/nlp/: pipeline.py
src/docruleredit/ui/: attribute_inspector.py  entity_ruler_panel.py  menus.py
src/docruleredit/viewer/: document_html_viewer.py  document_viewer.py
src/sitrepc2/cli/: __init__.py  app.py  db_cmd.py  dom_cmd.py  extract_cmd.py  fetch_cmd.py  init_cmd.py  lss_cmd.py  source_cmd.py
src/sitrepc2/config/: __init__.py  paths.py
src/sitrepc2/db/: core.py  pipeline.py  schema.sql
src/sitrepc2/dom/: candidate_confidence.py  dom_builder.py  dom_commit.py  dom_context_attach.py  dom_context_loader.py  dom_context_materializer.py  dom_dedupe.py  dom_enrichment.py  dom_filtering.py  dom_first_review.py  dom_ingest.py  dom_loader.py  dom_location_enrich.py  dom_persist_tree.py  dom_persistence.py  dom_pipeline.py  dom_report.py  dom_scoping.py  dom_snapshot.py  dom_tree_builder.py  event_locations.py  input_builder.py  input_type_defs.py  location_resolution.py  nodes.py  pipeline.py  rehydrate.py  resolution.py
src/sitrepc2/events/: event_locations.py  pipeline.py  resolution.py  resolver.py  typedefs.py
src/sitrepc2/gazetteer/: alias_service.py  aliases.py  group_neighbors.sql  index.py  io.py  lookup_util.py  osm_ingest.py  typedefs.py
src/sitrepc2/gui/: aliasedit.py  app.py  main.py  main_window.py
src/sitrepc2/ingest/: date_extract.py  facebook.py  http.py  telegram.py  translate.py  twitter.py
src/sitrepc2/locations/: event_locations.py
src/sitrepc2/lss/: __init__.py  bootstrap.py  contextualize.py  debug_entities.py  events.py  extract_lss.py  ids.py  lss_scoping.py  persist.py  phrases.py  pipeline.py  ruler.py  schema.sql  sectioning.py  summarize.py  typedefs.py
src/sitrepc2/nlp/: context.py  events.py  lss_scoping.py  phrases.py  pipeline.py  ruler.py  sectioning.py  typedefs.py
src/sitrepc2/reference/: d_lookup.json  direction_lookup.csv  directionals.jsonl  exonyms.py  op_groups.json  (+16 more)
(+79 files in other folders)
