[build-system]
requires = ["hatchling>=1.9"]
build-backend = "hatchling.build"

[project]
name = "sitrepc2"
version = "0.2.0"
description = "Automated event and location extraction pipeline for war reporting."
requires-python = ">=3.10,<3.12"

dependencies = [
    # --- Core scientific / NLP stack ---
    "numpy>=1.21,<1.25",
    "spacy>=3.5.0,<3.6",
    "holmes-extractor",
    "coreferee",
    "python-dotenv",

    # --- CLI / UX ---
    "typer>=0.7,<0.8.0",      # spaCy compatible
    "click>=8.0,<8.2",
    "rich",

    # --- Geo / spatial ---
    "shapely>=2.0",
    "pyproj",
    "pandas>=2.1,<2.2",
    "geopandas>=1.1.0,<1.2.0",
    "overpy>=0.6",
    "rtree>=1.1",

    # --- Telegram ingestion ---
    "telethon",

    # --- HTTP scraping ---
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "readability-lxml>=0.8.1",

    # --- Facebook scraping ---
    "facebook-scraper>=0.2.59",

    # --- Twitter/X scraping
    "twint @ git+https://github.com/twintproject/twint.git",

    # --- Translation (MarianMT) ---
    "transformers>=4.36,<4.40",
    "torch>=2.0,<2.3",

    # --- GUI (PySide6) ---
    "pyside6",
    "osmium>=3.5"


]

# ----------------------------------------------------------------------
# CLI entry point
# ----------------------------------------------------------------------

[project.scripts]
sitrepc2 = "sitrepc2.cli.app:app"
src2gui = "sitrepc2.gui.app:main"
docrule = "docrule.app:main"
gazdbedit = "dbeditc2.app:main"

# ----------------------------------------------------------------------
# Hatch build configuration
# ----------------------------------------------------------------------

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/sitrepc2",
    "src/docrule",
    "src/dbeditc2",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build]
include = [
    "src/sitrepc2/reference/**/*",
]
